# interview-ai

./: .cursorignore  .eslintrc.js  .gitignore  .lintstagedrc.js  .lintstagedrc.strict.js  .studioignore  BYOT_ENV_SETUP.md  CLAUDE.md  CORS_FIX_SUMMARY.md  EXPLANATION_ONLY_FIRESTORE_RULES_UPDATE_NEEDED  FIREBASE_AUTH_FIX.md  GEMINI.md  README.md  apphosting.yaml  firebase.json  firestore.indexes.json  firestore.rules  jest.config.js  jest.setup.js  justfile  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  test-formatting.json
backends/: README.md
backends/catalyst-rs-fns/: Cargo.toml  EOF  service.yaml
backends/catalyst-rs-fns/src/: main.rs
docs/: BYOT_NEXT_STEPS_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  Pulumi.catalyst-dev.yaml  aipm-capstone.html  blueprint.md  index.html  markdown-viewer.html  prd.md  pre_migration_prd.md  reset_prd.md  v09-launch-features.md
pulumi-gcp-byot-backend/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.stg.yaml  Pulumi.yaml  go.sum  main.go  run-pulumi.sh
pulumi-gcp-catalyst/: PULUMI_CHANGES_SUMMARY.md  setup.sh
pulumi-gcp-catalyst-backend/: PULUMI_CHANGES_SUMMARY.md  Pulumi.catalyst-dev.yaml  Pulumi.catalyst-stg.yaml  Pulumi.yaml  TESTING_GUIDE.md  firebase-token-helper.tsx  get-firebase-token.md  go.mod  main.go  pulumi.dev.yaml  pulumi.prod.yaml
pulumi-gcp-infrastructure/: enable-apis.sh  justfile  setup.sh
pulumi-gcp-interviewai/: PULUMI_CHANGES_SUMMARY.md
scripts/: context-reset.sh  health-check-context.sh
utils/: TokenButton.tsx  test-byot-api.js  (+5 more)
(+407 files in other folders)
