[package]
name = "catalyst-rs-fns"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-transformers = "0.9.1"
hf-hub = "0.4.2"
tokenizers = "0.21.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
